# AdventOfCode

./: .gitignore
cpp/: .clangd  CMakeLists.txt  CMakePresets.json  build.sh  vcpkg.json
cpp/src/: aoc.cpp  inputs.cpp  inputs.hpp  params.cpp  params.hpp
cpp/src/solutions/: solution1501.cpp  solution1502.cpp  solution1502.hpp  solution1502tests.cpp  solution1503.cpp  solution1503.hpp  solution1504.cpp  solution1504.hpp  solution1505.cpp  solution1505.hpp  solution1505tests.cpp  solution1506.cpp  solution1506.hpp  solution1506tests.cpp  solution1507.cpp  solution1507.hpp  solutions.cpp  solutions.hpp
cpp/src/solutions/2015/01/: solution1501.cpp
cpp/src/solutions/2015/02/: solution1502.cpp
cpp/src/solutions/2015/03/: solution1503.hpp
cpp/src/solutions/2015/04/: tests.cpp
cpp/src/solutions/2015/07/: solution1507.cpp  tests.cpp
cpp/src/solutions/tests/: solution1503.cpp  solution1506.cpp  solution1507.cpp
rs/aoc/: Cargo.toml
rs/aoc/src/: input_provider.rs  main.rs  params.rs
rs/aoc/src/solutions/: mod.rs  solution.rs  solution1501.rs  solution1502.rs  solution1503.rs  solution1504.rs  solution1505.rs
rs/aoc/src/solutions/solution1501/: mod.rs  tests.rs
